--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 		<a href="https://www.instagram.com/rezikal.a" target="_blank"> <h3>Instagram</h3></a>
        <div class="feature">
              <div  class="social-links">
-	   <a href="https://www.tiktok.com/in/@rezikal5" target="_blank"> <h3>TikTok</h3></a>
+	   <a href="https://www.tiktok.com/@rezikal5?is_from_webapp=1&sender_device=pc" target="_blank"> <h3>TikTok</h3></a>
     </div>
             </div>
        
