--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Beranda</title>
+    <title>Rezikal Akbar</title>
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome untuk ikon sosial media -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -25,10 +25,7 @@
             <a href="#" data-page="contact">Kontak</a>
         </div>
     </nav>
-    <audio autoplay loop id="background-music">
-        <source src="https://soundcloud.com/bayu-hanggada/feast-nina?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" type="audio/mpeg">
-        Browser Anda tidak mendukung elemen audio.
-      </audio>
+    
     <!-- Konten Utama -->
     <div class="content">
         <div class="welcome-container">
