--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
 
-        <h1 class="welcome-text">Selamat Datang</h1>
-        <p>Ini adalah halaman beranda.</p>
+<h1 class="welcome-text">Selamat Datang</h1>
+<p>halaman beranda tapi gaada isinya.</p>
 
